--- a/css/style.css
+++ b/css/style.css
@@ -176,7 +176,7 @@ a:hover {
 /* ===== HERO SECTION ===== */
 .hero-section {
   height: 100vh;
-  background-image: url("../images/hero-bg.jpg");
+  background-image: url("../images/hiker-918473_1280.jpg");
   background-size: cover;
   background-position: center;
   position: relative;
